Move field start_date to date

--- a/conferences.yml
+++ b/conferences.yml
@@ -1,14 +1,14 @@
 ---
 - name: GrafanaCon
   type: conference
-  start_date: 2018-03-01
+  date: 2018-03-01
   duration: 2
   city: Amsterdam
   state: Netherlands
   registration_link: http://grafanacon.org/
 - name: Config Mgmt Camp
   type: conference
-  start_date: 2018-02-05
+  date: 2018-02-05
   duration: 2
   city: Gent
   state: Belgium
