--- a/trainings.yml
+++ b/trainings.yml
@@ -1,7 +1,7 @@
 ---
 - name: Icinga 2 Advanced
   type: training
-  start_date: 2018-02-06
+  date: 2018-02-06
   duration: 3
   city: Nuremberg
   state: Germany
@@ -10,7 +10,7 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-02-15
+  date: 2018-02-15
   duration: 4
   city: Zurich
   state: Switzerland
@@ -19,7 +19,7 @@
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-02-19
+  date: 2018-02-19
   duration: 4
   city: Nuremberg
   state: Germany
@@ -28,7 +28,7 @@
   registration_link: https://az-it.academy/trainings/icinga2-fundamentals-training.html
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-03-13
+  date: 2018-03-13
   duration: 4
   city: Zurich
   state: Switzerland
@@ -37,7 +37,7 @@
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-03-13
+  date: 2018-03-13
   duration: 4
   city: Nuremberg
   state: Germany
@@ -46,7 +46,7 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-04-09
+  date: 2018-04-09
   duration: 4
   city: Nuremberg
   state: Germany
@@ -55,7 +55,7 @@
   registration_link: https://az-it.academy/trainings/icinga2-fundamentals-training.html
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-04-16
+  date: 2018-04-16
   duration: 4
   city: Nuremberg
   state: Germany
@@ -64,7 +64,7 @@
   registration_link: https://az-it.academy/trainings/icinga2-fundamentals-training.html
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-04-24
+  date: 2018-04-24
   duration: 4
   city: Atlanta
   state: Georgia
@@ -73,7 +73,7 @@
   registration_link: https://shadow-soft.com/event/icinga-training-course/
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-05-15
+  date: 2018-05-15
   duration: 4
   city: Hannover
   state: Germany
@@ -82,7 +82,7 @@
   registration_link: https://www.axxeo.de/schulungen/workshop-icinga-2.html
 - name: Icinga 2 Advanced
   type: training
-  start_date: 2018-06-19
+  date: 2018-06-19
   duration: 3
   city: Nuremberg
   state: Germany
@@ -91,7 +91,7 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-07-10
+  date: 2018-07-10
   duration: 4
   city: Nuremberg
   state: Germany
@@ -100,7 +100,7 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Advanced
   type: training
-  start_date: 2018-09-18
+  date: 2018-09-18
   duration: 3
   city: Nuremberg
   state: Germany
@@ -109,7 +109,7 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Fundamentals
   type: training
-  start_date: 2018-10-09
+  date: 2018-10-09
   duration: 4
   city: Nuremberg
   state: Germany
@@ -118,7 +118,7 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Advanced
   type: training
-  start_date: 2018-11-20
+  date: 2018-11-20
   duration: 3
   city: Nuremberg
   state: Germany
