--- a/trainings.yml
+++ b/trainings.yml
@@ -46,6 +46,15 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Fundamentals
   type: training
+  date: 2018-03-13
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Fundamentals
+  type: training
   date: 2018-04-09
   duration: 4
   city: Nuremberg
@@ -53,6 +62,15 @@
   partner: AZ IT-Systems & Consulting GmbH
   partner_link: https://www.az-it.systems/de/leistungen/it-monitoring-loesungen.html
   registration_link: https://az-it.academy/trainings/icinga2-fundamentals-training.html
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-04-09
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
 - name: Icinga 2 Fundamentals
   type: training
   date: 2018-04-16
@@ -80,6 +98,24 @@
   partner: axxeo GmbH
   partner_link: https://www.axxeo.de/monitoring.html
   registration_link: https://www.axxeo.de/schulungen/workshop-icinga-2.html
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-05-22
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-06-11
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
 - name: Icinga 2 Advanced
   type: training
   date: 2018-06-19
@@ -98,6 +134,33 @@
   partner: Netways GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-07-16
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-08-20
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-09-13
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
 - name: Icinga 2 Advanced
   type: training
   date: 2018-09-18
@@ -107,6 +170,15 @@
   partner: Netways GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-10-01
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
 - name: Icinga 2 Fundamentals
   type: training
   date: 2018-10-09
@@ -125,3 +197,21 @@
   partner: Netways GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-11-20
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-12-10
+  duration: 4
+  city: Zurich
+  state: Switzerland
+  partner: Linuxfabrik
+  partner_link: https://www.linuxfabrik.ch/
+  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
