--- a/icingacamps.yml
+++ b/icingacamps.yml
@@ -4,5 +4,5 @@
   date: 2018-03-16
   duration: 1
   city: New York
-  state: New York
+  state: United States
   registration_link: https://www.icinga.com/events/icinga-camp-new-york/
