Add country field

--- a/meetups.yml
+++ b/meetups.yml
@@ -4,5 +4,5 @@
   date: 2018-03-23
   duration: 1
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   registration_link: https://www.meetup.com/Icinga-Zurich-Meetup/events/246609329/
