--- a/trainings.yml
+++ b/trainings.yml
@@ -4,7 +4,7 @@
   date: 2018-03-13
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -13,7 +13,7 @@
   date: 2018-03-13
   duration: 4
   city: Nuremberg
-  state: Germany
+  country: Germany
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
@@ -22,7 +22,7 @@
   date: 2018-03-13
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -31,7 +31,7 @@
   date: 2018-04-09
   duration: 4
   city: Obertshausen
-  state: Germany
+  country: Germany
   partner: AZ IT-Systems & Consulting GmbH
   partner_link: https://www.az-it.systems/de/leistungen/it-monitoring-loesungen.html
   registration_link: https://az-it.academy/trainings/icinga2-fundamentals-training.html
@@ -40,7 +40,7 @@
   date: 2018-04-09
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -49,7 +49,7 @@
   date: 2018-04-10
   duration: 4
   city: Hannover
-  state: Germany
+  country: Germany
   partner: axxeo GmbH
   partner_link: https://www.axxeo.de/monitoring.html
   registration_link: https://www.axxeo.de/schulungen/workshop-icinga-2.html
@@ -58,7 +58,7 @@
   date: 2018-04-16
   duration: 4
   city: Obertshausen
-  state: Germany
+  country: Germany
   partner: AZ IT-Systems & Consulting GmbH
   partner_link: https://www.az-it.systems/de/leistungen/it-monitoring-loesungen.html
   registration_link: https://az-it.academy/trainings/icinga2-fundamentals-training.html
@@ -68,6 +68,7 @@
   duration: 4
   city: Atlanta
   state: Georgia
+  country: USA
   partner: Shadow-Soft
   partner_link: https://shadow-soft.com/icinga-partner/
   registration_link: https://shadow-soft.com/event/icinga-training-course/
@@ -76,7 +77,7 @@
   date: 2018-05-15
   duration: 4
   city: Hannover
-  state: Germany
+  country: Germany
   partner: axxeo GmbH
   partner_link: https://www.axxeo.de/monitoring.html
   registration_link: https://www.axxeo.de/schulungen/workshop-icinga-2.html
@@ -85,7 +86,7 @@
   date: 2018-05-22
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -94,7 +95,7 @@
   date: 2018-06-13
   duration: 4
   city: The Hague
-  state: Netherlands
+  country: Netherlands
   partner: OlinData
   partner_link: https://www.olindata.com/
   registration_link: https://www.olindata.com/en/training/icinga-2-fundamentals
@@ -103,7 +104,7 @@
   date: 2018-06-11
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -112,7 +113,7 @@
   date: 2018-06-19
   duration: 3
   city: Nuremberg
-  state: Germany
+  country: Germany
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
@@ -121,7 +122,7 @@
   date: 2018-07-10
   duration: 4
   city: Nuremberg
-  state: Germany
+  country: Germany
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
@@ -130,7 +131,7 @@
   date: 2018-07-16
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -139,7 +140,7 @@
   date: 2018-08-20
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -148,7 +149,7 @@
   date: 2018-09-13
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -157,7 +158,7 @@
   date: 2018-09-18
   duration: 3
   city: Nuremberg
-  state: Germany
+  country: Germany
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
@@ -166,7 +167,7 @@
   date: 2018-09-26
   duration: 4
   city: The Hague
-  state: Netherlands
+  country: Netherlands
   partner: OlinData
   partner_link: https://www.olindata.com/
   registration_link: https://www.olindata.com/en/training/icinga-2-fundamentals
@@ -175,7 +176,7 @@
   date: 2018-10-01
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -184,7 +185,7 @@
   date: 2018-10-09
   duration: 4
   city: Nuremberg
-  state: Germany
+  country: Germany
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
@@ -193,7 +194,7 @@
   date: 2018-11-20
   duration: 3
   city: Nuremberg
-  state: Germany
+  country: Germany
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
@@ -202,7 +203,7 @@
   date: 2018-11-20
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
@@ -211,7 +212,7 @@
   date: 2018-12-10
   duration: 4
   city: Zurich
-  state: Switzerland
+  country: Switzerland
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
