Take over Lanworks trainings

--- a/trainings.yml
+++ b/trainings.yml
@@ -37,6 +37,16 @@
   registration_link: https://az-it.academy/trainings/icinga2-fundamentals-training.html
 - name: Icinga 2 Fundamentals
   type: training
+  date: 2018-05-14
+  duration: 4
+  city: Duesseldorf/Neuss
+  state: North Rhine Westphalia
+  country: Germany
+  partner: Lanworks AG
+  partner_link: https://lanworks.de/de/index.html
+  registration_link: https://lanworks.de/de/kurse/beschreibung.php?strKurs=1377
+- name: Icinga 2 Fundamentals
+  type: training
   date: 2018-05-22
   duration: 4
   city: Atlanta
@@ -63,6 +73,16 @@
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Advanced
+  type: training
+  date: 2018-06-04
+  duration: 3
+  city: Duesseldorf/Neuss
+  state: North Rhine Westphalia
+  country: Germany
+  partner: Lanworks AG
+  partner_link: https://lanworks.de/de/index.html
+  registration_link: https://lanworks.de/de/kurse/beschreibung.php?strKurs=1378
 - name: Icinga 2 Fundamentals
   type: training
   date: 2018-06-13
@@ -92,6 +112,16 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Fundamentals
   type: training
+  date: 2018-07-02
+  duration: 4
+  city: Duesseldorf/Neuss
+  state: North Rhine Westphalia
+  country: Germany
+  partner: Lanworks AG
+  partner_link: https://lanworks.de/de/index.html
+  registration_link: https://lanworks.de/de/kurse/beschreibung.php?strKurs=1377
+- name: Icinga 2 Fundamentals
+  type: training
   date: 2018-07-10
   duration: 4
   city: Nuremberg
@@ -108,6 +138,16 @@
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Advanced
+  type: training
+  date: 2018-08-06
+  duration: 3
+  city: Duesseldorf/Neuss
+  state: North Rhine Westphalia
+  country: Germany
+  partner: Lanworks AG
+  partner_link: https://lanworks.de/de/index.html
+  registration_link: https://lanworks.de/de/kurse/beschreibung.php?strKurs=1378
 - name: Icinga 2 Fundamentals
   type: training
   date: 2018-08-20
@@ -117,6 +157,16 @@
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2018-09-03
+  duration: 4
+  city: Duesseldorf/Neuss
+  state: North Rhine Westphalia
+  country: Germany
+  partner: Lanworks AG
+  partner_link: https://lanworks.de/de/index.html
+  registration_link: https://lanworks.de/de/kurse/beschreibung.php?strKurs=1377
 - name: Icinga 2 Fundamentals
   type: training
   date: 2018-09-13
