Add Icinga Meetup Berlin

--- a/meetups.yml
+++ b/meetups.yml
@@ -1,2 +1,9 @@
 ---
+- name: Icinga Meetup Berlin
+  type: meetup
+  date: 2018-05-16
+  duration: 1
+  city: Berlin
+  country: Germany
+  registration_link: https://www.meetup.com/de-DE/Icinga-Users/events/250062966/
 
