--- a/meetups.yml
+++ b/meetups.yml
@@ -1,1 +1,9 @@
 ---
+- name: Icinga Meetup Jalandhar
+  type: meetup
+  date: 2018-07-27
+  duration: 1
+  city: Jalandhar
+  country: India
+  registration_link: https://nvite.com/IcingaMeetup/qo7xy4
+
