--- a/meetups.yml
+++ b/meetups.yml
@@ -17,6 +17,6 @@
   type: meetup
   date: 2018-08-16
   duration: 1
-  city: Berln
+  city: Berlin
   country: Germany
   registration_link: https://www.meetup.com/de-DE/Icinga-Users/events/252870082/
