--- a/trainings.yml
+++ b/trainings.yml
@@ -99,3 +99,162 @@
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-01-15
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2019-02-05
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga with Puppet Workshop
+  type: training
+  date: 2019-02-26
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-03-26
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-05-07
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga with Puppet Workshop
+  type: training
+  date: 2019-05-21
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2019-06-04
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-07-16
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-09-10
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2019-09-17
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga with Puppet Workshop
+  type: training
+  date: 2019-10-08
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-10-22
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2019-11-26
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-12-10
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
