--- a/icingacamps.yml
+++ b/icingacamps.yml
@@ -6,3 +6,10 @@
   city: Tel Aviv
   country: Israel
   registration_link: https://www.icinga.com/events/icinga-camp-tel-aviv/
+- name: Icinga Camp Berlin
+  type: camp
+  date: 2019-03-14
+  duration: 1
+  city: Berlin
+  country: Germany
+  registration_link: https://www.icinga.com/events/icinga-camp-berlin/
