--- a/trainings.yml
+++ b/trainings.yml
@@ -71,6 +71,16 @@
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
 - name: Icinga 2 Fundamentals
   type: training
+  date: 2019-03-19
+  duration: 4
+  city: Hannover
+  country: Germany
+  language: german
+  partner: axxeo GmbH
+  partner_link: https://www.axxeo.de/leistungen/monitoring/
+  registration_link: https://www.axxeo.de/leistungen/schulungen/workshop-icinga-2/
+- name: Icinga 2 Fundamentals
+  type: training
   date: 2019-03-26
   duration: 4
   city: Nuremberg
@@ -139,6 +149,16 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/en/trainings/icinga_trainings/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-09-24
+  duration: 4
+  city: Hannover
+  country: Germany
+  language: german
+  partner: axxeo GmbH
+  partner_link: https://www.axxeo.de/leistungen/monitoring/
+  registration_link: https://www.axxeo.de/leistungen/schulungen/workshop-icinga-2/
 - name: Icinga with Puppet Workshop
   type: training
   date: 2019-10-08
