--- a/icingacamps.yml
+++ b/icingacamps.yml
@@ -6,3 +6,26 @@
   city: Berlin
   country: Germany
   registration_link: https://icinga.com/events/icinga-camp-berlin/
+- name: Icinga Camp Atlanta
+  type: camp
+  date: 2019-05-16
+  duration: 1
+  city: Atlanta
+  state: Georgia
+  country: USA
+  registration_link: https://icinga.com/events/icinga-camp-atlanta/
+- name: Icinga Camp Seattle
+  type: camp
+  date: 2019-05-20
+  duration: 1
+  city: Seattle
+  state: Washington
+  country: USA
+  registration_link: https://icinga.com/events/icinga-camp-seattle/
+- name: Icinga Camp Milan
+  type: camp
+  date: 2019-09-26
+  duration: 1
+  city: Milan
+  country: Italy
+  registration_link: https://icinga.com/events/icinga-camp-milan/
