Add Icinga Meetup Salzburg

--- a/meetups.yml
+++ b/meetups.yml
@@ -6,3 +6,10 @@
   city: Berlin
   country: Germany
   registration_link: https://www.meetup.com/Icinga-Users/events/257742235/
+- name: Icinga Meetup Salzburg
+  type: meetup
+  date: 2019-02-01
+  duration: 1
+  city: Salzburg
+  country: Austria
+  registration_link: https://www.meetup.com/Icinga-Users-Austria/events/257940075/
