--- a/icingacamps.yml
+++ b/icingacamps.yml
@@ -13,3 +13,10 @@
   city: Milan
   country: Italy
   registration_link: https://icinga.com/events/icinga-camp-milan/
+- name: Icinga Camp Zurich
+  type: camp
+  date: 2019-11-12
+  duration: 1
+  city: Zurich
+  country: Switzerland
+  registration_link: https://icinga.com/events/icinga-camp-zurich/
