--- a/conferences.yml
+++ b/conferences.yml
@@ -1,2 +1,8 @@
 ---
-
+- name: OSMC
+  type: conference
+  date: 2019-11-04
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  registration_link: https://osmc.de/
