--- a/meetups.yml
+++ b/meetups.yml
@@ -1,4 +1,11 @@
 ---
+- name: Icinga Meetup Bangalore
+  type: meetup
+  date: 2019-06-19
+  duration: 1
+  city: Bangalore
+  country: India
+  registration_link: https://hasgeek.com/rootconf/icinga-meetup/
 - name: Icinga Meetup NL
   type: meetup
   date: 2019-06-12
