--- a/conferences.yml
+++ b/conferences.yml
@@ -5,7 +5,7 @@
   duration: 2
   city: Bangalore
   country: India
-  registration_link: https://rootconf.in/
+  registration_link: https://rootconf.in/2019/
 - name: OSMC
   type: conference
   date: 2019-11-05
