--- a/conferences.yml
+++ b/conferences.yml
@@ -6,3 +6,10 @@
   city: Nuremberg
   country: Germany
   registration_link: https://osmc.de/
+- name: IcingaConf 2020
+  type: conference
+  date: 2020-05-13
+  duration: 2
+  city: Amsterdam
+  country: Netherlands
+  registration_link: https://icingaconf.com/
