--- a/meetups.yml
+++ b/meetups.yml
@@ -1,15 +1,8 @@
 ---
 - name: Icinga Meetup
   type: meetup
-  date: 2019-08-07
+  date: 2019-09-24
   duration: 1
-  city: Berlin
-  country: Germany
-  registration_link: https://www.meetup.com/Icinga-Users/events/263160515/
-- name: Icinga Meetup
-  type: meetup
-  date: 2019-08-22
-  duration: 1
-  city: Linz
-  country: Austria
-  registration_link: https://www.meetup.com/Icinga-Users-Austria/events/262669018/
+  city: Den Haag
+  country: Netherlands
+  registration_link: https://www.meetup.com/NL-Icinga-Users-Meetup-Group/events/264054357/
