--- a/trainings.yml
+++ b/trainings.yml
@@ -49,6 +49,16 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-2-und-puppet-workshop/
+- name: Icinga Module Development
+  type: training
+  date: 2019-10-10
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-web-module-development/
 - name: Icinga 2 Fundamentals
   type: training
   date: 2019-10-22
@@ -89,3 +99,13 @@
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga Module Development
+  type: training
+  date: 2019-12-19
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-web-module-development/
