--- a/trainings.yml
+++ b/trainings.yml
@@ -1,64 +1,4 @@
 ---
-- name: Icinga 2 Fundamentals
-  type: training
-  date: 2019-09-16
-  duration: 4
-  city: Zurich
-  country: Switzerland
-  language: german
-  partner: Linuxfabrik
-  partner_link: https://www.linuxfabrik.ch/
-  registration_link: https://www.linuxfabrik.ch/schulungen/icinga
-- name: Icinga 2 Advanced
-  type: training
-  date: 2019-09-17
-  duration: 3
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-advanced/
-- name: Icinga 2 Fundamentals
-  type: training
-  date: 2019-09-24
-  duration: 4
-  city: Hannover
-  country: Germany
-  language: german
-  partner: axxeo GmbH
-  partner_link: https://www.axxeo.de/leistungen/monitoring/
-  registration_link: https://www.axxeo.de/leistungen/schulungen/workshop-icinga-2/
-- name: Icinga with Puppet Workshop
-  type: training
-  date: 2019-10-08
-  duration: 2
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-2-und-puppet-workshop/
-- name: Icinga Module Development
-  type: training
-  date: 2019-10-10
-  duration: 2
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-web-module-development/
-- name: Icinga 2 Fundamentals
-  type: training
-  date: 2019-10-22
-  duration: 4
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
 - name: Icinga Director Workshop
   type: training
   date: 2019-11-12
@@ -99,6 +39,16 @@
   partner: Linuxfabrik
   partner_link: https://www.linuxfabrik.ch/
   registration_link: https://www.linuxfabrik.ch/schulungen/icinga
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2019-12-10
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
 - name: Icinga Module Development
   type: training
   date: 2019-12-19
@@ -119,6 +69,16 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-2-und-puppet-workshop/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2020-01-21
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
 - name: Icinga Module Development
   type: training
   date: 2020-02-04
@@ -131,7 +91,7 @@
   registration_link: https://www.netways.de/trainings/icinga-web-module-development/
 - name: Icinga Director Workshop
   type: training
-  date: 2019-03-04
+  date: 2020-03-03
   duration: 2
   city: Nuremberg
   country: Germany
@@ -139,9 +99,19 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-director-workshop/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2020-03-10
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
 - name: Icinga Module Development
   type: training
-  date: 2020-04-02
+  date: 2020-04-01
   duration: 2
   city: Nuremberg
   country: Germany
@@ -179,6 +149,16 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-director-workshop/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2020-07-21
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: english
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
 - name: Icinga with Puppet Workshop
   type: training
   date: 2020-09-22
@@ -189,6 +169,16 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-2-und-puppet-workshop/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2020-10-06
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
 - name: Icinga Director Workshop
   type: training
   date: 2020-10-20
@@ -199,6 +189,76 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-director-workshop/
+- name: Icinga Module Development
+  type: training
+  date: 2020-12-08
+  duration: 2
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-web-module-development/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2020-02-04
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2020-05-26
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  language: english
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2020-07-07
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2020-09-22
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2020-12-01
+  duration: 4
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
+- name: Icinga 2 Advanced
+  type: training
+  date: 2020-12-08
+  duration: 3
+  city: Nuremberg
+  country: Germany
+  language: german
+  partner: NETWAYS GmbH
+  partner_link: https://www.netways.de/en/products/icinga/
+  registration_link: https://www.netways.de/trainings/icinga-advanced/
 - name: Icinga Module Development
   type: training
   date: 2020-12-08
