--- a/trainings.yml
+++ b/trainings.yml
@@ -169,6 +169,16 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-advanced/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2020-09-15
+  duration: 4
+  city: Hannover
+  country: Germany
+  language: german
+  partner: axxeo GmbH
+  partner_link: https://www.axxeo.de/leistungen/monitoring/icinga/
+  registration_link: https://www.axxeo.de/leistungen/schulungen/workshop-icinga-2/
 - name: Icinga with Puppet Workshop
   type: training
   date: 2020-09-22
