--- a/trainings.yml
+++ b/trainings.yml
@@ -1,74 +1,4 @@
 ---
-- name: Icinga 2 Fundamentals
-  type: training
-  date: 2020-05-26
-  duration: 4
-  city: Online Class
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
-- name: Icinga Director Workshop
-  type: training
-  date: 2020-06-23
-  duration: 2
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-director-workshop/
-- name: Icinga 2 Fundamentals
-  type: training
-  date: 2020-07-07
-  duration: 4
-  city: Online Class
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
-- name: Icinga 2 Advanced
-  type: training
-  date: 2020-07-21
-  duration: 3
-  city: Online Class
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-advanced/
-- name: Icinga 2 Fundamentals
-  type: training
-  date: 2020-09-15
-  duration: 4
-  city: Hannover
-  country: Germany
-  language: german
-  partner: axxeo GmbH
-  partner_link: https://www.axxeo.de/leistungen/monitoring/icinga/
-  registration_link: https://www.axxeo.de/leistungen/schulungen/workshop-icinga-2/
-- name: Icinga 2 Fundamentals
-  type: training
-  date: 2020-09-22
-  duration: 4
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/en/trainings/icinga-fundamentals/
-- name: Icinga with Puppet Workshop
-  type: training
-  date: 2020-09-22
-  duration: 2
-  city: Nuremberg
-  country: Germany
-  language: german
-  partner: NETWAYS GmbH
-  partner_link: https://www.netways.de/en/products/icinga/
-  registration_link: https://www.netways.de/trainings/icinga-2-und-puppet-workshop/
 - name: Icinga 2 Advanced
   type: training
   date: 2020-10-06
@@ -89,6 +19,16 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-director-workshop/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2020-11-26
+  duration: 4
+  city: Online Class
+  country: Germany
+  language: english
+  partner: Dexor S&M GmbH
+  partner_link: https://dexor.de/monitoring/
+  registration_link: https://dexor.de/icinga2-fundamentals-training-online/
 - name: Icinga 2 Fundamentals
   type: training
   date: 2020-12-01
@@ -119,3 +59,13 @@
   partner: NETWAYS GmbH
   partner_link: https://www.netways.de/en/products/icinga/
   registration_link: https://www.netways.de/trainings/icinga-advanced/
+- name: Icinga 2 Fundamentals
+  type: training
+  date: 2020-12-14
+  duration: 4
+  city: Köthen
+  country: Germany
+  language: english
+  partner: Dexor S&M GmbH
+  partner_link: https://dexor.de/monitoring/
+  registration_link: https://dexor.de/icinga2-fundamentals-training-online/
